# realitz

./: .gitignore  Compensation.md  Design.md  DeveloperNotes.md  README.md  UserStories.md  license_template.hs  license_template.hx  license_template.v  realestate.cabal  stack.yaml
Stephen Andrews/: TZTOKEN Generation  TZTokenGeneration.md
presentations/: ContaminatedPropertiesAssessment.tex  LetterToIntroduce.md  Makefile  RealitzProcessFlow.tex  SoftwareArchitecture.tex
presentations/autez/: Makefile  main.tex
presentations/autiz/: Makefile  main.tex
prototype/coq/: CommercialProperty.tex  CommercialProperty.v  HelloWorld.v  Task.v  test.glob  test.v
prototype/haskell/: Setup.hs  realestate.cabal  stack.yaml
prototype/haskell/src/: Main.hs
src/: Main.hs
src/Model/Core/: Lab.hs  Property.hs  Report.hs  Task.hs  Technician.hs  Types.hs
src/Realitz/Model/Core/: Lab.hs  Technician.hs
src/Realitz/Tezos/RPC/: Common.hs  Error.hs  InvalidBlock.hs  Protocol.hs  Types.hs
src/Realitz/Tezos/RPC/Operations/: Operation.hs  ResultStatus.hs
src/coq/: CommercialProperty.v  Makefile  Makefile.coq
src/haxe/: README.md  Realitz.hx  Realitz.js  TestNetworkConnection.hx  TestRealitz.hx  build.hxcpp.hxml  build.hxml  build.java.hxml  build.neko.hxml  test.networkconn.hxml
src/haxe/realitz/core/: Property.hx
src/haxe/realitz/tezos/rpc/: BlockHeader.hx  BlockValidator.hx  (+16 more)
src/haxe/tests/: TestBlockValidator.hx  TestNetworkConnection.hx  TestNetworkPeers.hx  TestRealitz.hx  test.blockvalidator.hxml  test.networkconn.hxml  test.networkpeers.hxml  test.realitz.hxml
(+18 files in other folders)
