name:                realestate
version:             0.1.0.0
synopsis:            A model to describe realestate remediation.
description:         Real estate transactions need careful scrutiny and 
                     a model to handle all of the relevant steps
homepage:            https://github.com/githubuser/realestate#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:  Design.md


executable realestate
  hs-source-dirs:      src
  main-is:    Main.hs
  default-language:    Haskell2010
  other-modules : 
    Realitz.Model.Core.Property
    , Realitz.Model.Core.Types
    , Realitz.Model.Core.Technician
    , Realitz.Model.Core.Lab
    , Realitz.Tezos.RPC.Types
    , Realitz.Tezos.RPC.InvalidBlock
    , Realitz.Tezos.RPC.Error
  build-depends:       
    base >= 4.7 && < 5
    , text >= 1.2 && < 1.3
    , time >= 1.8 && < 2.0
    , containers >= 0.5 && < 0.7
    , url
    , bytestring >= 0.10 && < 0.11
    , base58-bytestring >= 0.0.3 && < 0.2.0
